# isopod-explorer

./: .gitignore  .gitmodules  README.txt
micro_ros_raspberrypi_pico_sdk/: CHANGELOG.rst  README.md  package.xml
micro_ros_raspberrypi_pico_sdk/microros_static_library/library_generation/: library_generation.sh
micro_ros_raspberrypi_pico_sdk/microros_static_library/library_generation/extra_packages/: extra_packages.repos
ros2_ws/: orders.txt
ros2_ws/src/: .gitignore
ros2_ws/src/ROV/drivers/: CMakeLists.txt
ros2_ws/src/ROV/rov/: CMakeLists.txt  package.xml
ros2_ws/src/ROV/rov/launch/: joy.alunch.py
ros2_ws/src/ROV/rov/src/: joy_command.cpp
ros2_ws/src/ROV/rov_control/: CMakeLists.txt  package.xml
ros2_ws/src/ROV/rov_control/config/: ros2_control.yaml
ros2_ws/src/ROV/rov_control/description/: ros2_control.xacro
ros2_ws/src/ROV/rov_control/src/: pid.cpp  thrust_alloc.cpp
ros2_ws/src/ROV/rov_gui/: CMakeLists.txt  package.xml
ros2_ws/src/ROV/rov_micro/: CMakeLists.txt
ros2_ws/src/ROV/rov_micro/src/: lower_ebay.cpp  upper_ebay.cpp
ros2_ws/src/ROV/rov_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/ROV/rov_sensors/: CMakeLists.txt  package.xml
ros2_ws/src/ROV/rov_sensors/launch/: bar30_node.launch.py  imu_node.launch.py
ros2_ws/src/ROV/rov_thruster/: CMakeLists.txt  package.xml
ros2_ws/src/Sim_Practice/sim/: CMakeLists.txt  package.xml
ros2_ws/src/Sim_Practice/sim/config/: view_bot.rviz
ros2_ws/src/Sim_Practice/sim/description/: gazebo.xacro  material.xacro  robot_core.xacro
ros2_ws/src/Sim_Practice/sim/launch/: launch_sim.launch.py  rsp.launch.py
ros2_ws/src/micro-ros-pico/: CMakeLists.txt
ros2_ws/src/rov_sim/: CMakeLists.txt
ros2_ws/src/rov_sim/description/: depth_sensor.xacro  hydrodynamics.xacro  imu.xacro  robot.urdf.xacro  stereo_camera.xacro  thruster.xacro
ros2_ws/src/rov_sim/launch/: demo.launch.py  sim.launch.py
ros2_ws/src/rov_sim/rov_sim/: CMakeLists.txt  package.xml
ros2_ws/src/rov_sim/rov_sim/description/: robot.urdf.xacro  thruster.xacro
ros2_ws/src/rov_sim/rov_sim/launch/: demo.launch.py
ros2_ws/src/rov_sim/worlds/: underwater_basic.sdf
(+14 files in other folders)
